# cartoon

./: CMakeLists.txt  LICENSE  dockerfile
project_root/assets/animations/characters/: character.h  human.cpp  human.h  robot.cpp  robot.h
project_root/core/: integration  main.cpp  main_test.cpp  nova.cpp  nova.h
project_root/core/integrations/: azza_connector.cpp  azza_connector.h
project_root/core/modules/motion_blur/: motion_blur.cpp  motion_blur.h
project_root/core/modules/scene_renderer/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_manager_test.cpp  scene_renderer.cpp  scene_renderer.h
project_root/core/modules/sound_fx/: sound_fx.cpp  sound_fx.h
project_root/core/modules/story_processor/: processor.cpp  processor.h
project_root/core/modules/video_generator/: video_generator.cpp  video_generator.h
project_root/core/project_root/core/integrations/: azza_connector.h
project_root/core/utils/config/: config.cpp  config.h
project_root/core/utils/logging/: logging.cpp  logging.h
project_root/core/utils/performance/: performance.h
project_root/scripts/automation/: build_and_run.sh  run_test.sh
project_root/scripts/compilation_tools/: clean.sh
project_root/shared/: story_job.json
project_root/visuals/: visual.h
